# python-gdsii

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README  README.rst  pyproject.toml  setup.py
.github/workflows/: python.yaml
doc/: conf.py  index.rst  requirements.txt
doc/gdsii/: elements.rst
gdsii/: GDSII.py  GDSIIType.py  __init__.py  _records.py  _utils.py  elements.py  exceptions.py  library.py  record.py  structure.py  tags.py  types.py
gdsii/scripts/: gds2txt.py  gds2yaml.py  txt2gds.py
pygdsii/: __init__.py  _utils.py  elements.py  library.py  structure.py
scripts/: gds2txt  gds2yaml
test/: test_gdsii.py
